# ChangeLog for dev-python/twisted
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.88 2008/03/12 18:19:07 phreak Exp $

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> twisted-2.4.0.ebuild:
  Stable on sparc

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> twisted-2.4.0.ebuild:
  x86 stable

  09 Feb 2007; Marien Zwart <marienz@gentoo.org> files/digest-twisted-2.2.0,
  Manifest:
  Fix broken digest. Thanks to Benjamin Gehrels for reporting, closes bug
  #166124.

*twisted-2.5.0 (11 Jan 2007)

  11 Jan 2007; Marien Zwart <marienz@gentoo.org>
  -files/twisted-2.4.0-python-2.5-compat.patch,
  -files/twisted-2.4.0-remove-newjelly.patch,
  -files/twisted-2.4.0-trial-attempted-fix.patch,
  -files/twisted-2.4.0-trial-python-2.5-compat.patch,
  -files/twisted-2.4.0-unjellyable.patch, -twisted-2.4.0-r1.ebuild,
  +twisted-2.5.0.ebuild:
  Version bump, drop revision patched to work with python 2.5 (use the new
  bump instead).

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> twisted-2.4.0.ebuild:
  Stable on Alpha.

  25 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  twisted-2.4.0-r1.ebuild:
  Add ~x86-fbsd keyword.

*twisted-2.4.0-r1 (20 Sep 2006)

  20 Sep 2006; Marien Zwart <marienz@gentoo.org>
  +files/twisted-2.4.0-python-2.5-compat.patch,
  +files/twisted-2.4.0-remove-newjelly.patch,
  +files/twisted-2.4.0-trial-attempted-fix.patch,
  +files/twisted-2.4.0-trial-python-2.5-compat.patch,
  +files/twisted-2.4.0-unjellyable.patch, +twisted-2.4.0-r1.ebuild:
  Add a couple of patches from upstream to work with python 2.5. Does not
  quite pass its tests, that needs a fix in zopeinterface.

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  twisted-2.4.0.ebuild:
  hppa stable, bug #139612
