@@ -3,6 +3,8 @@ AUX twistd.init 545 RMD160 b77acc9468cd619e9af334c8a36ed3f9bb003494 SHA1 74db830
 AUX twisted-2.1.0-echo-less.patch 269 RMD160 c7fd9d87325a453ce9215591fc296b4b31505369 SHA1 779c8ab267702a3efdbbd1566f390746e8801ebe SHA256 1f190151c00c37dc5055f9b2b1dd7b0943523f29d57f78d5ca5f57723e3d9705
 AUX twisted-2.1.0-zsh-head.patch 592 RMD160 1fc8e7f8de64055e3801b442b4f666aef567ac71 SHA1 645f9ff44ff3b360026d0471092fd1b5f41d7122 SHA256 c9b8a994685159f21a3b0512eed1144876453db09f8d6843529dc0ef8d886029
 DIST TwistedCore-2.5.0.tar.bz2 2049409 RMD160 b2abe479286ef903054b182c6d408c8f3e5aad86 SHA1 23d945c2fb473008f51fbb87af5616344721afba SHA256 3404a92012734d527a7b2029ce6f588bbc02b27904760819b2ce86f81bcddaab
+DIST TwistedCore-8.0.1.tar.bz2 1180238 RMD160 06e4068469d579404bdf46647a6236afbf405148 SHA1 eebd94a52d0241d03b2b92c9f73530093072a861 SHA256 9033cd12455f4d4dd8b7542238ef42998b0bed409f1aeab4a1ad5c417744e45c
 EBUILD twisted-2.5.0.ebuild 3267 RMD160 9808596aeb5bf39fa301868af59d49c6970c27d1 SHA1 bb6c6a36f50374596b820fc91f4b466aa6bdfad4 SHA256 8a25063ec71722cb639b755ec43ea15882c6f4246ea8b69ebf9a5a4aa1e1a141
-MISC ChangeLog 15559 RMD160 e0b299e681c92b1429ece4e2bf4fe52dc5d0ba47 SHA1 b63379a8ae8dc8c46bb0f42783af43395f4fa9fd SHA256 42c42478388e6267391619885675f18e63f5f277ed3d9346d3398e7a408847fa
+EBUILD twisted-8.0.1.ebuild 3263 RMD160 587afca547cffbf0827bba1736dc812d2bc0c5f2 SHA1 d6d97a56c3a8e56dee230189fdad925799d85cd2 SHA256 981dde1bf4c6830275d658897ae75553824e6785b362bc0cd14e12da5955a8ba
+MISC ChangeLog 15678 RMD160 01cb53e9dee0e3d64ba370dd15d634c8bed89424 SHA1 e59d39583b8d5dabf04e2d86d645f3a21ce0562d SHA256 04af55b22b624165b683b976819c2766ab90d638038ceb1bacdda9b99bec8b19
 MISC metadata.xml 444 RMD160 0c3efd5527a47e660adfbb5aa7c9e4b3cf407eb6 SHA1 a891b253b5f761194bd82e9f6c086ef05c7af0e4 SHA256 17e24b80f75c35c6e1bba827d2b7816f2507b413f6506709a0579d283570cc04
